tests/ui/endpoint/dynamic_schema_missing_status_codes.stderr
error: `schema` and `status_codes` may only be used together
  --> tests/ui/endpoint/dynamic_schema_missing_status_codes.rs:15:21
   |
15 | #[read_all(schema = "schema")]
   |                     ^^^^^^^^
